# personal-blog

./: .dev-env  README.md  README_RU.md  TODO.md  docker-compose.dev.yml  docker-compose.pre-prod.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  README_RU.md  TODO  django-entrypoint.sh  entrypoint.dev.sh  entrypoint.sh  pyproject.toml  requirements.txt
backend/blog/: models.py  serializers.py  urls.py  views.py
backend/blog/forms/: forms.py
backend/blog/migrations/: 0003_alter_post_content_alter_post_is_published_and_more.py
backend/blog/serializers/: post.py  post_content.py  post_content_list.py
backend/blog/templates/blog/: base.html  detail.html  edit.html  editor_widget.html  index.html  list.html  post_create.html  post_detail.html  post_list.html  post_update.html
backend/docs/: README.md
backend/docs/source/: blog.migrations.rst  blog.rst  conf.py  django-pydoc.rst  index.rst  main.rst  modules.rst  users.migrations.rst  users.rst  users.tests.models.rst  users.tests.rst
backend/main/: settings.py  urls.py  views.py
backend/main/templates/main/: base.html  footer.html  header.html  index.html
backend/src/: django-pydoc.py
backend/src/blog/: __init__.py  admin.py  apps.py  models.py  tests.py  translation.py  urls.py  views.py
backend/src/blog/forms/: forms.py  widgets.py
backend/src/blog/migrations/: 0001_initial.py  (+10 more)
backend/src/main/: __init__.py  apps.py  asgi.py  celery.py  settings.py  sitemaps.py  urls.py  views.py  wsgi.py
backend/src/users/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/static/: .gitignore
backend/tests_coverage/: .gitignore
backend/users/: serializers.py  urls.py  views.py
(+81 files in other folders)
