[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

# dependencies which are required for launch backend.
# зависимости, которые требуются для запуска бэкенда.
dependencies = [
    "celery>=5.6.2",
    "django>=5.2.8",
    "django-taggit>=6.1.0",
    "django-vite>=3.1.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
    "uvicorn-worker>=0.4.0",
]

[dependency-groups]
# dependencies which are required only for development.
# зависимости, которые требуются только для разработки.
dev = [
    "coverage>=7.13.1",
    "ruff>=0.14.11",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]

# settings for auto-formatter and linting tool 'ruff' for python.
# настройки для авто-форматера и линтовщика 'ruff' для python  
[tool.ruff]
line-length = 80
lint.select = ["E", "F", "B", "I", "UP", "SIM", "PL", "D"]
exclude = [
  "*/migrations/",
  "static/",
  "media/",
  "manage.py"
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.pydocstyle]
convention = "google"
